--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
 #Local MongoDB config
 spring.data.mongodb.authentication-database=admin
-spring.data.mongodb.username=root
-spring.data.mongodb.password=root
+spring.data.mongodb.username=
+spring.data.mongodb.password=
 spring.data.mongodb.database=user_db
 spring.data.mongodb.port=27017
 spring.data.mongodb.host=localhost
